Update Doc “getting-startedinstallation”

--- a/docs/getting-startedinstallation.mdx
+++ b/docs/getting-startedinstallation.mdx
@@ -1,24 +1,18 @@
 ---
 name: Quick Start
-menu: ''
+menu: ""
 route: /
 ---
-# 🗒️ Gatsby Starter for Docz & Netlify CMS
+# 🗒️ Elementor Docz with Netlify CMS
 
-Easily spin up a new documentation site with the power of Docz and Netlify CMS.
-
-### Want to skip the manual install?
-
-[![Deploy to Netlify](https://www.netlify.com/img/deploy/button.svg)](https://app.netlify.com/start/deploy?repository=https://github.com/colbyfayock/gatsby-starter-docz-netlifycms)
-
-Then [configure Netlify Identity](#user-content-enable--configure-netlify-identity-for-authentication)
+This documentation site is powered by Docz and Netlify CMS.
 
 ### Here's What You Get
 
 * [Docz](https://docz.site) documentation engine powered by [Gatsby](https://www.gatsbyjs.org/)
 * [Netlify CMS](https://www.netlifycms.org/) content management
 
-## 🚀 Setting Up Your Gatsby Site
+## 🚀 Setting Up Your Lorem Elementor
 
 1. **Create a Gatsby site.**
 
@@ -39,12 +33,6 @@ Then [configure Netlify Identity](#user-content-enable--configure-netlify-identi
 
    Your site is now running at `http://localhost:8000`!
 
-## ⚡ Quick Start with Netlify
-
-### Deploy to Netlify
-
-[![Deploy to Netlify](https://www.netlify.com/img/deploy/button.svg)](https://app.netlify.com/start/deploy?repository=https://github.com/colbyfayock/gatsby-starter-docz-netlifycms)
-
 Note: This will request Github access and will create a repository for you
 
 ### Enable & Configure Netlify Identity for Authentication
@@ -59,4 +47,4 @@ Note: This will request Github access and will create a repository for you
 
 Once the invited user completes registration via the link in their email, they'll be able to log in via:
 
-`https://[your site].netlify.com/admin`
+`https://docz.lmntor.xyz/admin`
