Update Doc “creating-a-new-widgetadding-javascript-to-elementor-widgets”

--- a/docs/creating-a-new-widgetadding-javascript-to-elementor-widgets.mdx
+++ b/docs/creating-a-new-widgetadding-javascript-to-elementor-widgets.mdx
@@ -1,6 +1,6 @@
 ---
 name: Adding Javascript to Elementor Widgets
-menu: Creating a New Widget
+menu: Widgets
 route: widgets/creating-a-new-widget/adding-javascript-to-widgets
 ---
 # Adding Javascript to Elementor Widgets
