Update Doc “elementor-widgets”

--- a/docs/elementor-widgets.mdx
+++ b/docs/elementor-widgets.mdx
@@ -1,7 +1,7 @@
 ---
 name: Elementor Widgets
 menu: Widgets
-route: /widgets/elementor-widgets
+route: elementor-widgets
 ---
 # Elementor Widgets
 
