--- a/docs/widgetscreating-a-new-widget.mdx
+++ b/docs/widgetscreating-a-new-widget.mdx
@@ -1,7 +1,7 @@
 ---
 name: Creating a New Widget
 menu: Widgets
-route: creating-a-new-widget
+route: /creating-a-new-widget
 ---
 # Creating a New Widget
 
