--- a/docs/widget-categories.mdx
+++ b/docs/widget-categories.mdx
@@ -1,8 +1,11 @@
 ---
 name: Widget Categories
 menu: Widgets
+order: 10
 route: /widget-categories
+
 ---
+
 # Widget Categories
 Widget categories in Elementor are used to organize the widgets into groups. When Elementor is initialized, it registers several default categories. The categories are displayed in the widgets panel, only if they have widgets assigned to them.
 
