--- a/docs/add-custom-functionality.mdx
+++ b/docs/add-custom-functionality.mdx
@@ -7,6 +7,7 @@ route: "/add-custom-functionality"
 # Add Custom Functionality
 
 Now that you have a basic WordPress plugin, we need to add our own functionality. Lets add several custom features.
+With 
 
 ## Registering Custom Styles
 
